Implementado teste unitarios de todos controllers
